# Terminal-friend

./: .env.example  README.md  main.py  os_detection.py  pyproject.toml
Terminal-friend/: main.py
src/: log.txt  main.py
